fix: pagina sobre

--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato</title>
+    <title>Sobre</title>
     <link rel="stylesheet" href="assets/CSS/style.css">
 </head>
 <body>
@@ -22,9 +22,24 @@
     </nav>
 
     <header class="header">
-        <h1 class="title">📖 Sobre</h1>
+        <h1 class="title">Sobre o Projeto</h1>
     </header>
 
+    <main class="main">
+        <div class="container">
+            <div class="text-block">
+                <h2 class="subtitle">Objetivo do Site</h2>
+                <p class="text">Este site foi desenvolvido como parte do bloco 3 do bootcamp da Generation Brasil. O principal objetivo é aplicar os conhecimentos adquiridos durante o treinamento, que incluem:</p>
+                <ul>
+                    <li>Desenvolvimento de páginas web responsivas</li>
+                    <li>Implementação de conceitos de design e UX</li>
+                    <li>Utilização de técnicas de HTML e CSS para criar layouts atraentes</li>
+                    <li>Aplicação das melhores práticas de desenvolvimento web</li>
+                </ul>
+                <p class="text">Este projeto serve como um meio para consolidar as habilidades e conceitos aprendidos, garantindo uma compreensão prática e efetiva das ferramentas e técnicas usadas no desenvolvimento web.</p>
+            </div>
+        </div>
+    </main>
 
     <footer class="footer">
         <p class="footer-text">&copy; 2024 Júlia. Todos os direitos reservados.</p>
